make all lowercaase and new age group

--- a/bd_suicide.ipynb
+++ b/bd_suicide.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 104,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "2              drizzle  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 104,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -467,13 +467,238 @@
        "4   Hanging      18/9/20  1600387200         Haze  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_18048/2985407915.py:2: FutureWarning: DataFrame.applymap has been deprecated. Use DataFrame.map instead.\n",
+      "  df = df.applymap(lambda x: x.lower() if isinstance(x, str) else x)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>full_name</th>\n",
+       "      <th>age_group</th>\n",
+       "      <th>age</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>profession_group</th>\n",
+       "      <th>religion</th>\n",
+       "      <th>hometown</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>reason</th>\n",
+       "      <th>time</th>\n",
+       "      <th>method</th>\n",
+       "      <th>suicide_date</th>\n",
+       "      <th>unix_time</th>\n",
+       "      <th>weather_main</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>parvez</td>\n",
+       "      <td>teen</td>\n",
+       "      <td>22</td>\n",
+       "      <td>male</td>\n",
+       "      <td>worker</td>\n",
+       "      <td>muslim</td>\n",
+       "      <td>brahmanbaria</td>\n",
+       "      <td>23.964142</td>\n",
+       "      <td>91.118301</td>\n",
+       "      <td>harassment</td>\n",
+       "      <td>afternoon</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30/10/20</td>\n",
+       "      <td>1604016000</td>\n",
+       "      <td>haze</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>alhaj uddin</td>\n",
+       "      <td>teen</td>\n",
+       "      <td>20</td>\n",
+       "      <td>male</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>muslim</td>\n",
+       "      <td>sylhet</td>\n",
+       "      <td>24.894930</td>\n",
+       "      <td>91.868706</td>\n",
+       "      <td>relatiohship problem</td>\n",
+       "      <td>night</td>\n",
+       "      <td>hanging</td>\n",
+       "      <td>4/11/2020</td>\n",
+       "      <td>1604448000</td>\n",
+       "      <td>clouds</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>priti akter</td>\n",
+       "      <td>teen</td>\n",
+       "      <td>14</td>\n",
+       "      <td>female</td>\n",
+       "      <td>student</td>\n",
+       "      <td>muslim</td>\n",
+       "      <td>manikganj</td>\n",
+       "      <td>23.861650</td>\n",
+       "      <td>90.000320</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>hanging</td>\n",
+       "      <td>25/9/20</td>\n",
+       "      <td>1600992000</td>\n",
+       "      <td>drizzle</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>acchia akhter</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>female</td>\n",
+       "      <td>student</td>\n",
+       "      <td>muslim</td>\n",
+       "      <td>bogra</td>\n",
+       "      <td>24.850980</td>\n",
+       "      <td>89.371080</td>\n",
+       "      <td>relatiohship problem</td>\n",
+       "      <td>morning</td>\n",
+       "      <td>hanging</td>\n",
+       "      <td>24/9/20</td>\n",
+       "      <td>1600905600</td>\n",
+       "      <td>rain</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>dilshad nahar</td>\n",
+       "      <td>teen</td>\n",
+       "      <td>18</td>\n",
+       "      <td>female</td>\n",
+       "      <td>student</td>\n",
+       "      <td>muslim</td>\n",
+       "      <td>dhaka</td>\n",
+       "      <td>23.810331</td>\n",
+       "      <td>90.412521</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>night</td>\n",
+       "      <td>hanging</td>\n",
+       "      <td>18/9/20</td>\n",
+       "      <td>1600387200</td>\n",
+       "      <td>haze</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        full_name age_group  age  gender profession_group religion  \\\n",
+       "id                                                                   \n",
+       "0          parvez      teen   22    male           worker   muslim   \n",
+       "1     alhaj uddin      teen   20    male              NaN   muslim   \n",
+       "2     priti akter      teen   14  female          student   muslim   \n",
+       "3   acchia akhter       NaN  NaN  female          student   muslim   \n",
+       "4   dilshad nahar      teen   18  female          student   muslim   \n",
+       "\n",
+       "        hometown   latitude  longitude                reason       time  \\\n",
+       "id                                                                        \n",
+       "0   brahmanbaria  23.964142  91.118301            harassment  afternoon   \n",
+       "1         sylhet  24.894930  91.868706  relatiohship problem      night   \n",
+       "2      manikganj  23.861650  90.000320                   NaN    morning   \n",
+       "3          bogra  24.850980  89.371080  relatiohship problem    morning   \n",
+       "4          dhaka  23.810331  90.412521                   NaN      night   \n",
+       "\n",
+       "     method suicide_date   unix_time weather_main  \n",
+       "id                                                 \n",
+       "0       NaN     30/10/20  1604016000         haze  \n",
+       "1   hanging    4/11/2020  1604448000       clouds  \n",
+       "2   hanging      25/9/20  1600992000      drizzle  \n",
+       "3   hanging      24/9/20  1600905600         rain  \n",
+       "4   hanging      18/9/20  1600387200         haze  "
+      ]
+     },
+     "execution_count": 108,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# make all upper case letter to lower for better analysis\n",
+    "df = df.applymap(lambda x: x.lower() if isinstance(x, str) else x)\n",
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# convert age to numeric\n",
+    "df['age'] = pd.to_numeric(df['age'], errors='coerce')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make new age group\n",
+    "\n",
+    "bins = [1, 20, 40, 60, 75, 120]\n",
+    "labels = ['teen', 'young_adult', 'middle_age', 'young_old', 'old_old']\n",
+    "\n",
+    "df['age_group2'] = pd.cut(df['age'], bins=bins, labels=labels, right=False)"
    ]
   }
  ],
